--- a/my-app/src/components/App/App.scss
+++ b/my-app/src/components/App/App.scss
@@ -1,3 +1,36 @@
 .App {
+  width: 100vw;
+  min-height: 100vh;
+  height: fit-content;
+  margin: auto;
+  background-image: url(../../assets/images/stacked-waves-haikei-bg-mobile.svg);
+  background-size: cover;
+  @media (min-width: 1080px) {
+    background-image: url(../../assets/images/stacked-waves-haikei-bg-pc.svg);
+  }
   text-align: center;
+
+  &-dark {
+    background-image: url(../../assets/images/stacked-waves-haikei-bg-mobile-dark-mode.svg);
+    @media (min-width: 1080px) {
+      background-image: url(../../assets/images/stacked-waves-haikei-bg-pc-dark-mode.svg);
+    }
+    color: rgb(229, 229, 240);
+    a {
+      color: rgb(148, 168, 255);
+    }
+  }
+
+  h1 {
+    font-family: 'Arima', display;
+    font-weight: 600;
+    font-size: 1.5em;
+  }
+
+  h2 {
+    font-family: 'Arima', display;
+    font-weight: 100;
+    font-style: italic;
+    text-align: right;
+  }
 }
