--- a/my-app/src/components/Header/Header.scss
+++ b/my-app/src/components/Header/Header.scss
@@ -1,9 +1,40 @@
 header {
-    .header-titles {
-        width: 80vw;
-        max-width: 300px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 1em;
+    .dark-mode-container {
+        padding-top: 1em;
+        text-align: right;
+        padding-right: 1em;
+        input[type='checkbox'] {
+            display: none;
+        }
+        label {
+            position: relative;
+            cursor: pointer;
+            display: inline-block;
+            width: 2em;
+            height: 1em;
+            background-color: #ee9c8e;
+            border-radius: 2em;
+            box-shadow: inset 0 0.1em 0.3em rgba(0, 0, 0, 0.2), inset 0 -0.1em 0.3em #ffe5d35d;
+            transition: all ease-in-out 0.4s;
+        }
+        label::after {
+            content: '';
+            position: absolute;
+            top: -0.25em;
+            left: -0.4em;
+            width: 1.5em;
+            height: 1.5em;
+            background-image: url(../../assets/images/sun.png);
+            background-size: cover;
+            transition: all ease-in-out 0.4s;
+        }
+        input[type='checkbox']:checked + label {
+            background-color: #2a2258;
+            box-shadow: inset 0 0.2em 0.4em rgba(0, 0, 0, 0.6), inset 0 -0.1em 0.3em #e3d2ff1f;
+        }
+        input[type='checkbox']:checked + label::after {
+            background-image: url(../../assets/images/moon.png);
+            transform: translate(100%, -5%);
+        }
     }
 }
