--- a/my-app/src/components/Header/Header.scss
+++ b/my-app/src/components/Header/Header.scss
@@ -1,8 +1,8 @@
 header {
     .dark-mode-container {
         padding-top: 1em;
-        text-align: right;
-        padding-right: 1em;
+        text-align: left;
+        padding-left: 1em;
         input[type='checkbox'] {
             display: none;
         }
