--- a/my-app/src/components/AboutMe/AboutMe.scss
+++ b/my-app/src/components/AboutMe/AboutMe.scss
@@ -8,10 +8,15 @@
         border-image: linear-gradient(90deg, rgba(0,0,0,0) 20%, rgba(248,240,234,0.2) 30%, rgba(248,240,234,0.2) 70%, rgba(0,0,0,0) 80%) 1;
         padding-bottom: 1em;
         .infos-item {
+            width: 85%;
             display: flex;
-            margin: 0 0 0.5em 2em;
+            margin: 0 0 0.5em 1.5em;
             align-items: center;
             gap: 1em;
+            padding: 0.5em;
+            background-color: #f0c3a37a;
+            border-radius: 0.5em;
+            transition: background-color 0.4s ease-in-out;
             .infos-img {
                 width: 2em;
                 @media (min-width: 768px) {
@@ -26,9 +31,6 @@
         .other-text {
             margin-bottom: 1em;
             text-align: left;
-            @media (min-width: 768px) {
-                font-size: 1.2em;
-            }
             .other-training {
                 margin: 0.5em 0;
                 font-size: 1.1em;
@@ -59,8 +61,21 @@
             }
         }
         .softskills-list {
-            @media (min-width: 768px) {
+            .softskill-item {
                 font-size: 1.2em;
+                font-weight: 600;
+                color: #332660;
+                @media (min-width: 768px) {
+                    font-size: 1.4em;
+                }
+                transition: color 0.4s ease-in-out;
+            }
+            .softskill-text {
+                margin: auto;
+                font-size: 0.9em;
+                opacity: 0.7;
+                padding: 0.5em 0;
+                font-style: italic;
             }
         }
     }
