--- a/my-app/src/components/Footer/Footer.scss
+++ b/my-app/src/components/Footer/Footer.scss
@@ -11,6 +11,7 @@ footer {
         background-color: #332660;
         border-radius: 0.2em;
         opacity: 0.8;
+        transition: background-color 0.4s ease-in-out;
         button img {
             width: 40px;
         }
@@ -25,29 +26,30 @@ footer {
 
     .credits {
         width: 100%;
-        padding: 0.7em 1em 0;
+        padding: 0.5em 1em 0;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         text-align: right;
-        font-size: 0.8em;
+        font-size: 0.7em;
         color: #332660;
         @media (min-width: 500px) {
             flex-direction: row;
             justify-content: space-between;
+            font-size: 0.8em;
         }
         .made-by {
             width: 100%;
             text-align: right;
-            @media (min-width: 768px) {
+            @media (min-width: 500px) {
                 text-align: left;
             }
         }
         .icons-bg {
             width: 100%;
 
-            @media (min-width: 768px) {
+            @media (min-width: 500px) {
                 text-align: right;
             }
         }
