--- a/my-app/src/components/App/App.scss
+++ b/my-app/src/components/App/App.scss
@@ -43,7 +43,7 @@
     font-family: 'Arima';
     font-weight: 100;
     font-size: 1.2em;
-    margin: 0.5em 0 0 1em;
+    margin: 1em 0 0 1em;
     text-align: left;
   }
 
@@ -58,6 +58,13 @@
       opacity: 0.1;
       vertical-align: sub;
     }
+  }
+
+  h6 {
+    font-family: 'Dosis', sans-serif;
+    font-weight: 600;
+      font-size: 1.1em;
+      margin-bottom: 0.5em;
   }
 
   .subtitles {
