Laptop CSS breakpoints but About me

--- a/my-app/src/components/App/App.scss
+++ b/my-app/src/components/App/App.scss
@@ -111,3 +111,12 @@
     }
   }
 }
+
+// Laptop
+@media (min-width: 1024px) {
+  .training, .experience {
+    .content {
+      width: 40vw;
+    }
+  }
+}
